refactor(user): Stream .toList() 사용